第 3 章 特指度和层叠 md

--- a/CSS权威指南（第4版）/第 3 章 特指度和层叠/test.css
+++ b/CSS权威指南（第4版）/第 3 章 特指度和层叠/test.css
@@ -1,13 +1,6 @@
-h1 {
-    font-style: italic;
-    color: gray !important;
+p#bright {
+    color: silver;
 }
-
-.title {
+p {
     color: black;
-    background-color: silver;
-}
-
-* {
-    background: black !important;
 }
