--- a/CSS权威指南（第4版）/第 4 章 值和单位/test.css
+++ b/CSS权威指南（第4版）/第 4 章 值和单位/test.css
@@ -1,6 +1,4 @@
-body {
-    background: url(http://www.pix.web);/*正确*/
-}
-body {
-    background: url (http://www.pix.web);/*错误*/
+main {
+    color: gray;
+    border-color: currentColor;
 }
