第 4 章 值和单位.md

--- a/CSS权威指南（第4版）/第 4 章 值和单位/test.css
+++ b/CSS权威指南（第4版）/第 4 章 值和单位/test.css
@@ -1,4 +1,7 @@
-main {
-    color: gray;
-    border-color: currentColor;
+@supports (color:var(--custom)) {
+    /* 使用变量的样式 */
+}
+
+@supports (--custom:value) {
+    /* 替代样式 */
 }
